# cool_compiler

./: .gitignore  LICENSE  README.md  cool_compiler.opam  dune-project
lib/layout/: dune  mipsobjlayout.ml  objlayout.ml  temp.ml
lib/parser/: abstractsyntax.ml  ast.ml  ast.mli  astprint.ml  astprint.mli  coollexer.mll  coolparser.mly  coolparser.output  dune  lexerprint.ml  lexerprint.mli  location.ml  location.mli  parsedriver.ml  parsedriver.mli
lib/semant/: dune  exprchecker.ml  exprchecker.mli  globalvalidator.ml  globalvalidator.mli  localvalidator.ml  localvalidator.mli  methodtbl.ml  methodtbl.mli  semantprint.ml  semantprint.mli  typecheck.ml  typecheck.mli  typeenv.ml  typeenv.mli  types.ml  types.mli  validator.ml  validator.mli
lib/translator/: dune  instrselector.ml  intermediaterepr.ml  irprint.ml  labeler.ml  methoddata.ml  mipsobjlayout.ml  mipsobjlayout.mli  objectlayout.ml  objectlayout.mli  objlayout_intf.ml  temp.ml  temp.mli  translator.ml  treeir.ml  varversion.ml  varversion.mli  x86objlayout.ml  x86objlayout.mli
lib/util/: architecture.ml  dune  hashtblutil.ml  hashtblutil.mli  helpers.ml  optutil.ml  optutil.mli  rmq.ml  rmq.mli  sparsetbl.ml  sparsetbl.mli  strtbl.ml  strtbl.mli  symtbl.ml  symtbl.mli  tables.ml  tables.mli  tbl.ml  tbl.mli  tree.ml  tree.mli
samples/: calculator.cl
test/lib/lexerexpecttest/: all_else_true.cl.cool.exp  arith.cool.exp  atoi.cool.exp  backslash.cool.exp  backslash2.cool.exp  badidentifiers.cool.exp  badkeywords.cool.exp  book_list.cl.cool.exp  bothcomments.cool.exp  comment_in_string.cl.cool.exp  dune  endcomment.cool.exp  eofstring.cool.exp  escaped_chars_in_comment.cl.cool.exp  escapedeof.cool.exp  escapednull.cool.exp  escapedquote.cool.exp  escapedunprintables.cool.exp  hairyscary.cool.exp  integers2.cool.exp  invalidcharacters.cool.exp  invalidinvisible.cool.exp  io.cool.exp  keywords.cool.exp  lexerexpecttest.ml  life.cool.exp  lineno2.cool.exp  lineno3.cool.exp  longcomment.cool.exp  longstring_escapedbackslashes.cool.exp  multilinecomment.cool.exp  nestedcomment.cool.exp  new_complex.cool.exp  null_in_code.cl.cool.exp  null_in_string.cl.cool.exp  null_in_string_followed_by_tokens.cl.cool.exp  null_in_string_unescaped_newline.cl.cool.exp  objectid.test.cool.exp  opencomment.cool.exp  operators.cool.exp  (+25 more)
test/lib/parser/: asttest.ml  coollexertest.ml  dune
test/lib/parserexpecttest/: addedlet.test  addedlet.test.exp  arithprecedence.test.exp  assigngetstype.test  assignment.test.exp  assignseq.test.exp  associativity+.test.exp  associativity-.test.exp  associativity-times.test.exp  associativitydiv.test.exp  atoi.test  atoi.test.exp  badexprlist.test  casemultiplebranch.test.exp  classmethodonearg.test.exp  classonefield.test.exp  classtwofields.test.exp  comparisons-assoc.test.exp  complex.test  complex.test.exp  dispatcharglist.test.exp  dispatchnoargs.test.exp  dispatchonearg.test.exp  dune  firstbindingerrored.test  formallists.test.exp  ifexpressionblock.test.exp  ifnested.test.exp  letassociativity.test.exp  letinit.test.exp  letinitmultiplebindings.test.exp  letnoinit.test.exp  letparens.test  letparens.test.exp  multipleatdispatches.test.exp  multipleattributes.test.exp  multipledispatches.test.exp  nestedblocks.test  nestedblocks.test.exp  nestedlet.test.exp  (+7 more)
test/lib/parsertest/: asttest.ml  coollexertest.ml
test/lib/semant/: dune  typestest.ml
test/lib/semantexpecttest/: anattributenamedself.test.exp  assignment.test.exp  assignnoconform.test.exp  attrbadinit.test.exp  attributeredefined.test  attributeredefined.test.exp  attroverride.test  attroverride.test.exp  badargs1.test  badargs1.test.exp  badarith.test  badarith.test.exp  badattrinit.test  badattrinit.test.exp  badcondpred.test  badcondpred.test.exp  baddispatch.test  baddispatch.test.exp  badequalitytest.test.exp  badequalitytest2.test.exp  badmethodcallsitself.test.exp  badnegatetype.test  badnegatetype.test.exp  badnottype.test  badnottype.test.exp  badoverridereturntype.test  badoverridereturntype.test.exp  badredefineint.test.exp  badstaticdispatch.test  badstaticdispatch.test.exp  badwhilebody.test  badwhilebody.test.exp  badwhilecond.test  badwhilecond.test.exp  basic.test.exp  basicclassestree.test.exp  branchselftype.test  branchselftype.test.exp  branchselfvar.test  branchselfvar.test.exp  (+100 more)
test/lib/semanttest/: dune  methodtbltest.ml  typestest.ml
test/lib/testutil/: dune  treeutil.ml
test/lib/util/: dune  sparsetbltest.ml  strtbltest.ml  symtbltest.ml  treetest.ml
test/lib/utiltest/: dune  optutiltest.ml  sparsetbltest.ml  symtbltest.ml  treetest.ml
